# text-encoders

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/workflows/: python-release.yml
notebooks/01-openai-encoder/: 01-openai-encoder.ipynb
notebooks/02-weaviate-cache/: 01-weaviate-cache.ipynb
src/text_encoders/: setup.py
src/text_encoders/text_encoders/encoders/: openai_encoder.py
src/text_encoders/text_encoders/meta/: __init__.py
src/text_encoders/text_encoders/meta/interfaces/: text_encoder.py
src/text_encoders/text_encoders/utils/: h5_files.py
text_encoders/encoders/: __init__.py  openai_encoder.py
text_encoders/meta/interfaces/: text_encoder.py
text_encoders/weaviate_cache/: __init__.py  weaviate_cache.py
